[tool.poetry]
name = "message-bot-starlett"
version = "0.1.0"
description = ""
authors = ["Adrian Lyjak <adrian@chatmeter.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
